Gjort klart navigeringsmenyn och gjort den responsiv

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             
             <div class="dark-mode">
-                <span>Dark Mode</span>
+                <span class="darkmode-text">Dark Mode</span>
                 <label class="toggle">     
                     <input type="checkbox">
                     <span class="slider"></span>
