Skapat sektion för alla loggor med olika företag och gjort den responsiv

--- a/index.html
+++ b/index.html
@@ -85,7 +85,32 @@
 
         </section>
 
+        <section class="logos">
+            <div class="container spacing-y-3">
+                <div class="logo-card">
+                    <img src="/images/logoipsum/logoipsum1.svg" alt="">
+                </div>
+                <div class="logo-card">
+                    <img src="/images/logoipsum/logoipsum2.svg" alt="">
+                </div>
+                <div class="logo-card">
+                    <img src="/images/logoipsum/logoipsum3.svg" alt="">
+                </div>
+                <div class="logo-card">
+                    <img src="/images/logoipsum/logoipsum4.svg" alt="">
+                </div>
+                <div class="logo-card">
+                    <img src="/images/logoipsum/logoipsum5.svg" alt="">
+                </div>
+                <div class="logo-card">
+                    <img src="/images/logoipsum/logoipsum6.svg" alt="">
+                </div>
 
+            </div>
+
+        </section>
+
+       
 
     </main>
 
