Byggt ut how does it work sektionen och gjort den responsiv

--- a/index.html
+++ b/index.html
@@ -194,6 +194,34 @@
             </div>
         </section>
 
+        <section class="how-does-it-work">
+            <div class="container">
+                <div class="hdiw-title">
+                    <h2>How Does It Work?</h2>
+                </div>
+                <div class="hdiw-images">
+                    <div class="iphone-card1">
+                        <img src="/images/how-does-it-work/iphone-pro-1.png" alt="">
+                    </div>
+                    <div class="iphone-card2">
+                        <img src="/images/how-does-it-work/iPhone-pro-2.png" alt="">
+                    </div>
+                    <div class="iphone-card3">
+                        <img src="/images/how-does-it-work/iphone-pro-3.png" alt="">
+                    </div>
+                    
+
+                </div>
+
+                <div class="hdiw-bottom-text">
+                    <h3>Transfer to people from your contact list</h3>
+                    <p>Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
 
 
