--- a/index.html
+++ b/index.html
@@ -222,6 +222,39 @@
 
         </section>
 
+        <section class="feature-2">
+            <div class="container spacing-y-3">
+                <div class="content-part-1">
+                    <div class="content-container">
+                        <h2>Make your money <br>transfer simple and clear</h2>
+                        <ul>
+                            <li class="list-card">
+                                <img src="/images/icons/checkmark.svg" alt="">
+                                Banking transactions are free for you
+                            </li>
+                            <li class="list-card">
+                                <img src="/images/icons/checkmark.svg" alt="">
+                                No monthly cash commission
+                            </li>
+                            <li class="list-card">
+                                <img src="/images/icons/checkmark.svg" alt="">
+                                Manage payments and transactions online
+                            </li>
+                        </ul>
+                        <a href="#" class="learn-more-btn">
+                            <span>Learn more</span>
+                            <img src="/images/icons/arrow-right.svg" alt="">
+                        </a>
+                    </div>
+                    <div class="feature-img-container">
+                        <img src="/images/features-2/feature1.png" alt="">
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
     </main>
 
 
