--- a/index.html
+++ b/index.html
@@ -252,6 +252,39 @@
 
                 </div>
 
+                <div class="content-part-2">
+                    <div class="feature-2-part-2-img">
+                        <img src="/images/features-2/feature2.png" alt="">
+                    </div>
+                    <div class="content-container2">
+                        <h2>Receive payment from <br>international bank details</h2>
+                        <div class="content-card-flex">
+                            <div class="content-card">
+                                <div class="icon-container">
+                                    <img src="/images/features/credit-card.svg" alt="">
+                                </div>
+                                <div class="content-text">
+                                    <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
+                                </div>
+                            </div>
+                            <div class="content-card">
+                                <div class="icon-container">
+                                    <img src="/images/features/wallet.svg" alt="">
+                                </div>
+                                <div class="content-text">
+                                    <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
+                                </div>
+                            </div>
+
+                        </div>
+                        <a href="#" class="learn-more-btn">
+                            <span>Learn more</span>
+                            <img src="/images/icons/arrow-right.svg" alt="">
+                        </a>
+
+                    </div>
+                </div>
+
             </div>
 
         </section>
