--- a/index.html
+++ b/index.html
@@ -288,6 +288,22 @@
             </div>
 
         </section>
+
+        <section class="testimonials">
+            <div class="container spacing-y-3">
+                <div class="testimonials-container">
+                    <div class="testimonials-title">
+                        <h2>Clients are <br>Loving Our App</h2>
+                    </div>
+                    <div class="testimonials-img">
+                        <img src="/images/testimonials.png" alt="">
+                    </div>
+                </div>
+               
+
+            </div>
+
+        </section>
     </main>
 
 
