--- a/index.html
+++ b/index.html
@@ -405,6 +405,27 @@
             </div>
 
         </section>
+
+        <section class="newsletter">
+            <div class="container">
+                <div class="newsletter-container">
+                    <div class="newsletter-text">
+                        <img src="/images/icons/notification.svg" alt="">
+                        <h3 class="newsletter-text-mobile">Subscribe to our <br>newletter</h3>
+                        <h3 class="newsletter-text-desktop">Subscribe to our newsletter to stay <br>informed about latest updates</h3>
+                        
+                    </div>
+                    <div class="newsletter-form">
+                        <img class="icon" src="/images/icons/envelope.svg" alt="">
+                        <input class="newsletter-input" input="email" img placeholder="Your Email">
+                        <button class="subscribe-btn">Subscribe</button>
+                    </div>
+                </div>
+                
+
+            </div>
+
+        </section>
     </main>
 
 
