Byggt ut all rights reserved texten på botten av sidan

--- a/index.html
+++ b/index.html
@@ -427,7 +427,15 @@
 
         </section>
     </main>
-
+    <footer>
+        <section class="all-rights-reserved">
+            <div class="container">
+                <div class="all-right-text">
+                    <p>© 2024 Silicon. All rights reserved. Credit MadrasThemes</p>
+                </div>
+            </div>
+        </section>
+    </footer>
 
 
 </body>
