Lagt till css variabler för färgerna på texter

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                         </div>  
                     </div>
                     <div class="accordion">
-                        <div class="question-card">
+                        <div class="question-card question-card-1-dm">
                             <button class="question-first">
                                 Is any of my personal information stored in the App?
                                 <img src="/images/icons/arrow-up-primary.svg" alt="">
